--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:gravity="center"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,131 +9,128 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:weightSum="8"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:id="@+id/back_btn_id"
-            android:padding="10dp"
-            android:drawableStart="@drawable/back_btn"
+        android:layout_weight="6.5">
+        <RelativeLayout
 
-            android:layout_margin="5dp"
-            android:layout_height="match_parent"
-            />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:textSize="14dp"
-            android:textColor="#000000"
-
+            android:layout_gravity="center"
+            android:layout_width="360dp"
+            android:layout_height="320dp">
+        <RelativeLayout
+            android:layout_marginLeft="20dp"
             android:gravity="center"
-            android:text="NOW PLAYING"/>
-        <androidx.appcompat.widget.SearchView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_width="360dp"
+            android:layout_height="320dp">
+            <LinearLayout
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="50dp"
+                android:weightSum="2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="0:00"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:text="0:00"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
 
-            android:id="@+id/search_Btn">
+            </LinearLayout>
 
-        </androidx.appcompat.widget.SearchView>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:id="@+id/menu_btn_id"
-            android:paddingRight="15dp"
-            android:gravity="center"
-            android:drawableEnd="@drawable/menu_btn"
-            android:background="#E9EDF0"
-            android:layout_margin="5dp"
+        </RelativeLayout>
+            <RelativeLayout
+                android:layout_marginLeft="20dp"
+                android:layout_width="320dp"
+                android:layout_height="320dp"
+                >
 
-            />
+                <androidx.cardview.widget.CardView
+                    android:background="@drawable/bg"
+                    android:layout_width="240dp"
+                    android:layout_height="240dp"
+                    android:id="@+id/view2"
+                    app:cardCornerRadius="120dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
+                    android:innerRadius="0dp"
+                    android:shape="ring"
+                    android:layout_margin="40dp"
+                    >
+                    <ImageView
+                        android:layout_width="222dp"
+                        android:layout_height="220dp"
+                        android:src="@drawable/bg"
+                        android:id="@+id/song_img"
+                        android:scaleType="centerCrop"
+                        />
+
+
+
+                </androidx.cardview.widget.CardView>
+
+
+                <com.marcinmoskala.arcseekbar.ArcSeekBar
+                    android:layout_width="320dp"
+                    android:layout_height="320dp"
+                    app:roundEdges="true"
+                    android:rotationY="180"
+                    android:id="@+id/seekbar_id"
+                    android:rotation="180"
+                    android:layout_alignParentBottom="true"
+                    app:progressColor="#E91E63"
+                    app:thumb="@drawable/seekbar_point"/>
+
+
+
+
+
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/all"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_margin="30dp"
+                    android:id="@+id/all_id"
+                    />
+
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/suffel"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="30dp"
+                    android:id="@+id/suffel_id"
+                    />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+
+
     </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6.5"
-        >
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="12dp"
-            android:id="@+id/view2"
-            app:cardCornerRadius="120dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:innerRadius="0dp"
-            android:layout_marginBottom="35dp"
-            android:shape="ring"
-            android:thicknessRatio="2"
-            >
-            <ImageView
-                android:layout_width="222dp"
-                android:layout_height="220dp"
-                android:src="@drawable/bg"
-                android:id="@+id/song_img"
-                android:scaleType="centerCrop"
-                />
-        </androidx.cardview.widget.CardView>
-
-
-
-<!--        <com.marcinmoskala.arcseekbar.ArcSeekBar-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:roundEdges="true"-->
-<!--            android:rotationY="180"-->
-<!--            android:id="@+id/seekbar_id"-->
-<!--            android:rotation="180"-->
-<!--            android:layout_marginLeft="30dp"-->
-<!--            android:layout_marginRight="30dp"-->
-<!--            android:padding="5dp"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            app:progressColor="#E91E63"-->
-<!--            app:thumb="@drawable/seekbar_point"/>-->
-
-
-
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="25dp"
-            android:src="@drawable/all"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="30dp"
-            android:id="@+id/all_id"
-            />
-
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="25dp"
-            android:src="@drawable/suffel"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_margin="30dp"
-            android:id="@+id/suffel_id"
-            />
-
-    </RelativeLayout>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight=".6">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".6"
+        android:layout_height="wrap_content"
         android:textSize="13dp"
         android:text="Bon Jovi - Janie, Don't Take Your Love To Town"
         android:textAlignment="center"
@@ -141,18 +139,21 @@
         android:layout_marginRight="20dp"
         />
 
+</LinearLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2.2"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:orientation="horizontal"
         android:weightSum="3"
         >
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
             android:layout_weight="1"
             app:cardCornerRadius="20dp"
             android:layout_margin="10dp"
@@ -166,7 +167,7 @@
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
             android:layout_weight="1"
             app:cardCornerRadius="20dp"
             android:layout_margin="10dp"
@@ -180,7 +181,7 @@
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
             android:layout_weight="1"
             app:cardCornerRadius="20dp"
             android:layout_margin="10dp"
@@ -194,16 +195,26 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="UP NEXT"
-        android:padding="3dp"
-        android:textSize="12dp"
-        android:layout_marginLeft="15dp"
-        >
 
-    </TextView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="UP NEXT"
+            android:padding="3dp"
+            android:textSize="12dp"
+
+            />
+
+    </LinearLayout>
+
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -220,6 +231,5 @@
     android:layout_height="0dp"
     android:id="@+id/main_rv"
     android:layout_weight="3.5"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"/>
+   />
 </LinearLayout>
