--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -38,7 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content">
         <TextView
-            android:gravity="center"
+            android:paddingLeft="10dp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:textStyle="italic"
@@ -53,7 +53,7 @@
 
 
         <TextView
-
+            android:paddingLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14dp"
