--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,237 +9,246 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <LinearLayout
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="320dp"
-        >
-        <RelativeLayout
-
-            android:layout_gravity="center"
-            android:layout_width="360dp"
-            android:layout_height="320dp">
-        <RelativeLayout
-            android:layout_marginLeft="20dp"
+        <LinearLayout
             android:gravity="center"
-            android:layout_width="360dp"
-            android:layout_height="320dp">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
             <LinearLayout
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="50dp"
-                android:weightSum="2"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="320dp"
+                >
+                <RelativeLayout
+
+                    android:layout_gravity="center"
+                    android:layout_width="360dp"
+                    android:layout_height="320dp">
+                    <RelativeLayout
+                        android:layout_marginLeft="20dp"
+                        android:gravity="center"
+                        android:layout_width="360dp"
+                        android:layout_height="320dp">
+                        <LinearLayout
+                            android:layout_marginRight="20dp"
+                            android:layout_marginBottom="50dp"
+                            android:weightSum="2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:text="0:00"
+                                android:layout_weight="1"
+                                android:gravity="left"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"/>
+                            <TextView
+                                android:text="0:00"
+                                android:layout_weight="1"
+                                android:gravity="right"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"/>
+
+                        </LinearLayout>
+
+
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="320dp"
+                        android:layout_height="320dp"
+                        >
+
+                        <androidx.cardview.widget.CardView
+                            android:background="@drawable/bg"
+                            android:layout_width="240dp"
+                            android:layout_height="240dp"
+                            android:id="@+id/view2"
+                            app:cardCornerRadius="120dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerInParent="true"
+                            android:innerRadius="0dp"
+                            android:shape="ring"
+                            android:layout_margin="40dp"
+                            >
+                            <ImageView
+                                android:layout_width="222dp"
+                                android:layout_height="220dp"
+                                android:src="@drawable/bg"
+                                android:id="@+id/song_img"
+                                android:scaleType="centerCrop"
+                                />
+
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+                        <com.marcinmoskala.arcseekbar.ArcSeekBar
+                            android:layout_width="320dp"
+                            android:layout_height="320dp"
+                            app:roundEdges="true"
+                            android:rotationY="180"
+                            android:id="@+id/seekbar_id"
+                            android:rotation="180"
+                            android:layout_alignParentBottom="true"
+                            app:progressColor="#E91E63"
+                            app:thumb="@drawable/seekbar_point"/>
+
+
+
+
+
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/all"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_margin="30dp"
+                            android:id="@+id/all_id"
+                            />
+
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/suffel"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentLeft="true"
+                            android:layout_margin="30dp"
+                            android:id="@+id/suffel_id"
+                            />
+
+                    </RelativeLayout>
+
+                </RelativeLayout>
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:padding="10dp"
+                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
                 <TextView
-                    android:text="0:00"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:text="0:00"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
+                    android:gravity="center"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:textStyle="italic"
+                    android:singleLine="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="13dp"
+                    android:text="Bon Jovi - Janie Don't Take Your Love To Town"
+                    android:textAlignment="center"
+                    android:id="@+id/song_name_id"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    />
 
             </LinearLayout>
 
 
-        </RelativeLayout>
-            <RelativeLayout
-                android:layout_marginLeft="20dp"
-                android:layout_width="320dp"
-                android:layout_height="320dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="horizontal"
+                android:weightSum="3"
                 >
-
                 <androidx.cardview.widget.CardView
-                    android:background="@drawable/bg"
-                    android:layout_width="240dp"
-                    android:layout_height="240dp"
-                    android:id="@+id/view2"
-                    app:cardCornerRadius="120dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:innerRadius="0dp"
-                    android:shape="ring"
-                    android:layout_margin="40dp"
+                    android:id="@+id/prevButtonId"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="20dp"
+                    android:layout_margin="10dp"
                     >
                     <ImageView
-                        android:layout_width="222dp"
-                        android:layout_height="220dp"
-                        android:src="@drawable/bg"
-                        android:id="@+id/song_img"
-                        android:scaleType="centerCrop"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/back_ic"
                         />
-
-
-
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/playButtonId"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="20dp"
+                    android:layout_margin="10dp"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/pause_ic"
+                        />
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/nextButtonId"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="20dp"
+                    android:layout_margin="10dp"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/forwd_ic"
+                        />
                 </androidx.cardview.widget.CardView>
 
+            </LinearLayout>
 
-                <com.marcinmoskala.arcseekbar.ArcSeekBar
-                    android:layout_width="320dp"
-                    android:layout_height="320dp"
-                    app:roundEdges="true"
-                    android:rotationY="180"
-                    android:id="@+id/seekbar_id"
-                    android:rotation="180"
-                    android:layout_alignParentBottom="true"
-                    app:progressColor="#E91E63"
-                    app:thumb="@drawable/seekbar_point"/>
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="UP NEXT"
+                    android:padding="5dp"
+                    android:textSize="12dp"
 
-
-
-
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/all"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_margin="30dp"
-                    android:id="@+id/all_id"
                     />
 
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="25dp"
-                    android:src="@drawable/suffel"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_margin="30dp"
-                    android:id="@+id/suffel_id"
-                    />
-
-            </RelativeLayout>
-
-        </RelativeLayout>
+            </LinearLayout>
 
 
 
-    </LinearLayout>
-
-    <LinearLayout
-     android:gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1">
-    <TextView
-        android:gravity="center"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:textStyle="italic"
-        android:singleLine="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="13dp"
-        android:text="Bon Jovi - Janie Don't Take Your Love To Town"
-        android:textAlignment="center"
-        android:id="@+id/song_name_id"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-
-</LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.6"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="horizontal"
-        android:weightSum="3"
-        >
-        <androidx.cardview.widget.CardView
-            android:id="@+id/prevButtonId"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
-            app:cardCornerRadius="20dp"
-            android:layout_margin="10dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/back_ic"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#AA8D8D"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="3dp"
                 />
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/playButtonId"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
-            app:cardCornerRadius="20dp"
-            android:layout_margin="10dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
+
+            <ListView
+                android:layout_marginTop="5dp"
+                android:id="@+id/listView"
+                android:dividerHeight="10sp"
+                android:padding="8dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/pause_ic"
                 />
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/nextButtonId"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_weight="1"
-            app:cardCornerRadius="20dp"
-            android:layout_margin="10dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/forwd_ic"
-                />
-        </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:textAlignment="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="UP NEXT"
-            android:padding="3dp"
-            android:textSize="12dp"
-
-            />
-
-    </LinearLayout>
-
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#AA8D8D"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="3dp"
-        />
-
-    <ListView
-        android:layout_margin="5dp"
-        android:id="@+id/listView"
-        android:dividerHeight="10sp"
-        android:padding="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3.5"/>
+    
 
 </LinearLayout>
