--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,12 +37,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <TextView
+                                android:id="@+id/sonStartTimeTextViewId"
                                 android:text="0:00"
                                 android:layout_weight="1"
                                 android:gravity="left"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"/>
                             <TextView
+                                android:id="@+id/songStopTextViewId"
                                 android:text="0:00"
                                 android:layout_weight="1"
                                 android:gravity="right"
@@ -75,7 +77,7 @@
                                 android:layout_width="222dp"
                                 android:layout_height="220dp"
                                 android:src="@drawable/bg"
-                                android:id="@+id/song_img"
+                                android:id="@+id/imageViewId"
                                 android:scaleType="centerCrop"
                                 />
 
@@ -89,7 +91,7 @@
                             android:layout_height="320dp"
                             app:roundEdges="true"
                             android:rotationY="180"
-                            android:id="@+id/seekbar_id"
+                            android:id="@+id/seekBarId"
                             android:rotation="180"
                             android:layout_alignParentBottom="true"
                             app:progressColor="#E91E63"
@@ -113,11 +115,13 @@
                             android:layout_weight="1"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
-                            <ImageView
-                                android:layout_width="40dp"
-                                android:layout_height="30dp"
+                            <ImageButton
+
+                                android:background="#EDECEC"
+                                android:layout_width="50dp"
+                                android:layout_height="40dp"
                                 android:src="@drawable/ic_baseline_fast_rewind_24"
-                                android:id="@+id/all_id"
+                                android:id="@+id/FRButtonId"
                                 />
                         </LinearLayout>
                         <LinearLayout
@@ -125,11 +129,13 @@
                             android:layout_weight="1"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content">
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
+                            <ImageButton
+
+                                android:background="#EDECEC"
+                                android:layout_width="50dp"
+                                android:layout_height="40dp"
                                 android:src="@drawable/ic_baseline_fast_forward_24"
-                                android:id="@+id/suffel_id"
+                                android:id="@+id/FFButtonId"
                                 />
 
                         </LinearLayout>
@@ -149,6 +155,7 @@
                 android:layout_height="wrap_content"
                 >
                 <TextView
+
                     android:gravity="center"
                     android:ellipsize="marquee"
                     android:marqueeRepeatLimit="marquee_forever"
@@ -159,7 +166,7 @@
                     android:textSize="13dp"
                     android:text="Bon Jovi - Janie Don't Take Your Love To Town"
                     android:textAlignment="center"
-                    android:id="@+id/song_name_id"
+                    android:id="@+id/songNameTextViewId"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     />
@@ -252,13 +259,12 @@
                 />
 
             <ListView
-                android:layout_marginTop="5dp"
                 android:id="@+id/listView"
-                android:dividerHeight="10sp"
-                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:layout_marginTop="5dp"
+                android:dividerHeight="10sp"
+                android:padding="8dp" />
 
         </LinearLayout>
 
