--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,6 +183,7 @@
                 android:weightSum="3"
                 >
                 <androidx.cardview.widget.CardView
+                    android:layout_gravity="center"
                     android:id="@+id/prevButtonId"
                     android:layout_width="0dp"
                     android:layout_height="80dp"
@@ -191,8 +192,8 @@
                     android:layout_margin="10dp"
                     >
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center"
                         android:src="@drawable/back_ic"
                         />
@@ -206,8 +207,9 @@
                     android:layout_margin="10dp"
                     >
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/playImageViewId"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center"
                         android:src="@drawable/pause_ic"
                         />
@@ -221,8 +223,8 @@
                     android:layout_margin="10dp"
                     >
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center"
                         android:src="@drawable/forwd_ic"
                         />
