--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,8 +25,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:src="@drawable/bg"
-                android:scaleType="fitXY"
+                android:src="@drawable/song_img"
+                android:scaleType="centerCrop"
                 android:id="@+id/img"
                />
         </androidx.cardview.widget.CardView>
