--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,21 +15,17 @@
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="100dp"
-            android:id="@+id/crd"
-            android:background="#E9EDF0"
-            >
-            <ImageView
-                android:layout_width="match_parent"
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/song_img"
-                android:scaleType="centerCrop"
-                android:id="@+id/img"
-               />
-        </androidx.cardview.widget.CardView>
+                app:civ_border_width="1dp"
+                app:civ_border_color="#FF000000"/>
+
+
     </LinearLayout>
     <LinearLayout
         android:layout_marginLeft="10dp"
