--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -8,7 +8,7 @@
     >
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_marginBottom="10dp"
-       android:layout_marginLeft="20dp"
+       android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
