--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -21,9 +21,9 @@
     <TextView
         android:textStyle="bold"
         android:paddingLeft="15dp"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
-        android:text="Attendance App"
+        android:text="My Music Player"
         android:id="@+id/navigationSubHeaderId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
