--- a/app/src/main/res/layout/color_change_box.xml
+++ b/app/src/main/res/layout/color_change_box.xml
@@ -8,6 +8,7 @@
 
 
     <RadioGroup
+
         android:layout_margin="35dp"
         android:id="@+id/radioGroupId"
         android:layout_width="wrap_content"
@@ -18,6 +19,7 @@
         android:orientation="vertical" >
 
         <RadioButton
+            android:layout_margin="10dp"
             android:id="@+id/purpleRadioButtonId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
