--- a/app/src/main/res/layout/color_box.xml
+++ b/app/src/main/res/layout/color_box.xml
@@ -6,15 +6,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:textStyle="italic"
-        android:textColor="#000000"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textSize="25sp"
-        android:text="Select color"
-        android:layout_width="250dp"
-        android:layout_height="50dp"/>
+   <LinearLayout
+       android:layout_width="250dp"
+       android:layout_height="50dp">
+       <TextView
+           android:textStyle="italic"
+           android:textColor="#000000"
+           android:gravity="center"
+           android:textAlignment="center"
+           android:textSize="25sp"
+           android:text="Select color"
+           android:layout_width="180dp"
+           android:layout_height="50dp"/>
+       <androidx.cardview.widget.CardView
+           android:backgroundTint="#FFEB3B"
+           android:layout_gravity="center"
+           android:layout_width="50dp"
+           android:layout_height="50dp"
+           app:cardCornerRadius="25dp"
+
+           />
+
+   </LinearLayout>
+        
+
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
